tests/fixtures/errors/rename_internal_hidden.z
# Once a member is exposed under a public alias, its internal name is private:
# `x` is exposed as `px`, so reading `p.x` from outside is rejected.
point: record { x: i64 y: i64 } as {
    public: unit { px: x py: y }
}

main: function is {
    p: point x: 1 y: 2
    d: p.x
    print "\{d}"
}
